applications/echo/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: echo 
  annotations:
    name: echo 
  labels:
    name: echo 
    istio-injection: enabled
