applications/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: echo
  name: echo-server 
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
